<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:background="@drawable/guide_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="账户："
            android:textSize="20sp"
            android:layout_marginStart="5dp" />
        <EditText
            android:id="@+id/telephone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editsharp"
            android:hint="@string/cellphone_number"
            android:inputType="number"
            tools:ignore="TextFields" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="密码："
            android:textSize="20sp"
            android:layout_marginStart="5dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/editsharp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/loginIn"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="ButtonStyle"
            android:background="@drawable/buttom_enabled_true" />

        <Button
            android:id="@+id/sign"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/signUp"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="ButtonStyle"
            android:background="@drawable/buttom_enabled_true" />

    </LinearLayout>
</LinearLayout>